# zk-payroll-contracts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  PR_DESCRIPTION_134.md  PR_DESCRIPTION_58.md  README.md  proof.json  proof_bytes.json  public.json
.cargo/: audit.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: setup-labels.sh
.github/workflows/: ci.yml  rust-fmt-clippy.yml  rust-test-build.yml  wasm-size-regression.yml
circuits/: generate_proof.js  payment.circom  range_proof.circom
cli/: Cargo.toml
cli/src/: crypto.rs  db.rs  main.rs  reconcile.rs  rpc.rs
contracts/audit_module/: Cargo.toml
contracts/audit_module/src/: lib.rs  tests.rs
contracts/integration_tests/: Cargo.toml
contracts/integration_tests/src/: fixtures.rs  lib.rs  proof_helper.rs  upgrade_simulation.rs
contracts/module_template/: Cargo.toml
contracts/module_template/src/: lib.rs
contracts/pause_manager/: Cargo.toml
contracts/pause_manager/src/: lib.rs
contracts/payment_executor/: Cargo.toml
contracts/payment_executor/src/: lib.rs
contracts/payment_executor/tests/: security_tests.rs
contracts/payroll/: Cargo.toml
contracts/payroll/src/: lib.rs
contracts/payroll_registry/: Cargo.toml  README.md
contracts/payroll_registry/src/: lib.rs  tests.rs
contracts/proof_verifier/: Cargo.toml
contracts/proof_verifier/src/: lib.rs  tests.rs
contracts/proof_verifier/tests/: integration.rs
contracts/salary_commitment/: Cargo.toml
contracts/salary_commitment/src/: lib.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
docs/: SLA_OPERATIONAL_TARGETS.md  benchmarks.md  contributor-module-checklist.md  deployment.md  events.md  fixtures-guide.md  glossary.md  incident-response-playbook.md  payload-examples.md  sdk-interface-spec.md  security-review-checklist.md  troubleshooting-soroban-build.md  v0-readiness-checklist.md
docs/architecture/: 001-privacy-audit-tradeoffs.md  commitment-state-storage-layout-13.md  company-lifecycle-states-106.md
docs/compliance/: retention-archival-policy.md
docs/interop/: client-fallback-behavior.md  contract-upgrade-strategy.md  proof-schema-version-negotiation.md  reconciliation-status.md
docs/monitoring/: alert-rules.md  event-severity-mappings.md  event-taxonomy.md  health-metrics-observability.md
docs/ops/: preflight-deployment-checklist.md  production-cutover-checklist.md  rollback-checklist.md
docs/testing/: wasm-size-regression-thresholds.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_proof_validation.rs
scripts/: check-wasm-size.py  compile_circuits.sh  demo.sh  generate_soroban_vk.js  pre-commit.sh  wasm-size-thresholds.json
tests/: integration.rs
