[workspace]
resolver = "2"
members = [
    "contracts/payroll_registry",
    "contracts/salary_commitment",
    "contracts/proof_verifier",
    "contracts/payment_executor",
    "contracts/audit_module",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/your-org/zk-payroll-contracts"
authors = ["ZK Payroll Team"]

[workspace.dependencies]
soroban-sdk = "21.0.0"
soroban-token-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
