[package]
name    = "zk-payroll-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "zk-payroll"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# SQLite — bundled so no system libsqlite3 is required
rusqlite = { version = "0.31", features = ["bundled"] }

# Cryptographically secure random bytes (OsRng)
rand = "0.8"

# BN254 scalar field for field-element arithmetic
ark-bn254    = "0.4"
ark-ff       = "0.4"
ark-serialize = "0.4"

# Poseidon hash with circomlib-compatible parameters over BN254
light-poseidon = "0.2"

# Hex encoding for database storage and user-facing output
hex = "0.4"

# Cross-platform home directory (~/.zk-payroll)
dirs = "5"

# Ergonomic error propagation for CLI binaries
anyhow = "1"

# ── Reconcile command ──────────────────────────────────────────────────────────

# Blocking HTTP client for Soroban JSON-RPC calls
reqwest = { version = "0.12", features = ["blocking", "json"] }

# JSON serialisation / deserialisation for RPC request-response types
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XDR decoding for Soroban event topics and data blobs
stellar-xdr = "21"

# Base64 decoding of XDR blobs returned by the RPC
base64 = "0.22"

# Stellar StrKey encoding (G... addresses) from raw ed25519 public-key bytes
stellar-strkey = "0.0.8"

# Terminal table rendering for the reconcile output
comfy-table = "7"
