[package]
name = "module_template"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scaffold for new zk-payroll contract modules (issue #109)"

[dependencies]
soroban-sdk = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
